# rusty-journal

./: Cargo.toml  notes.txt  test-journal.json
src/: main.rs  tasks.rs
