[package]
name = "rusty-journal"
version = "0.1.0"
authors = ["Elton Dornelas <eltondornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
structopt = "0.3.21"
serde_json = "1.0.64"

[dependencies.serde]  # Add serde in its own section.
version = "1.0.126"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
